update contract and script

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Make sure to rename this file to .env before adding your private keys!!!
 PRIVATE_KEY_1=''
+PRIVATE_KEY_2=''
 # Add more if your project requires more private keys
 
 # API keys for developer tooling and infra
